--- a/diagnosis.html
+++ b/diagnosis.html
@@ -87,7 +87,7 @@
                 <div class="menu collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="global.html">Global Settings</a></li>
-                        <li class="nav-item"><a class="nav-link" href="dashboard.html" id="header_link_diag">Dashboard</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html" id="header_link_diag">index</a></li>
                         <li class="nav-item"><a class="nav-link active" href="diagnosis.html"
                                 id="header_link_diag">Diagnosis</a></li>
                         <li class="nav-item"><a class="nav-link" href="user-administrtation.html" id="header_link_user">
