--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </button>
         <div class="menu collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link active" href="#">Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link active" href="#">index</a></li>
             <li class="nav-item"><a class="nav-link" href="config.html" id="header_link_diag">Configuration</a></li>
             <li class="nav-item"><a class="nav-link" href="global.html">Global Settings</a></li>
             <li class="nav-item"><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
