--- a/user-administrtation.html
+++ b/user-administrtation.html
@@ -86,7 +86,7 @@
         <div class="menu collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="config.html"> Configuration </a></li>
-            <li class="nav-item"><a class="nav-link" href="dashboard.html" id="header_link_diag">Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html" id="header_link_diag">index</a></li>
             <li class="nav-item"><a class="nav-link active" href="#" id="header_link_user"> User
                 Admin..</a></li>
             <li class="nav-item"><a class="nav-link" href="global.html">Global Settings</a></li>
