--- a/config.html
+++ b/config.html
@@ -83,7 +83,7 @@
             <div class="menu collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item" ><a class="nav-link active" href="#">Configuration</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html" id="header_link_diag">index</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html" id="header_link_diag">Dashboard</a></li>
                     <li class="nav-item" ><a class="nav-link" href="log.html" id="header_link_diag">Log Data</a></li>
                     <li class="nav-item" ><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
                     <li class="nav-item" ><a class="nav-link" href="user-administrtation.html" id="header_link_user"> User Administration</a></li>
