--- a/manage-shift.html
+++ b/manage-shift.html
@@ -95,7 +95,7 @@
             <div class="menu collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <!-- <li class="nav-item" ><a class="nav-link" onclick="history.back()">Back</a></li> -->
-                    <li class="nav-item"><a class="nav-link" href="index.html" id="header_link_diag">index</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html" id="header_link_diag">Dashboard</a></li>
                     <li class="nav-item"><a class="nav-link" href="config.html" id="header_link_diag">Configuration</a></li>
                     <li class="nav-item" ><a class="nav-link active" href="#" id="header_link_setting">Manage Shift</a></li>
                     <li class="nav-item" ><a class="nav-link" href="diagnosis.html" id="header_link_diag">Diagnosis</a></li>
