--- a/settings.html
+++ b/settings.html
@@ -495,7 +495,7 @@
                             <button class="btn bg-blue fw-bold text-white mx-1 rounded-0" id="refresh" style="display: none;" type="button" onclick="doSyncFromTimer()">
                                     Refresh
                             </button>
-                            <button type="button" id="btn_set_timer_time" onclick="setDateTime();" class="btn bg-blue fw-bold text-white mx-1 rounded-0">Set Date Time</button>
+                            <!-- <button type="button" id="btn_set_timer_time" onclick="setDateTime();" class="btn bg-blue fw-bold text-white mx-1 rounded-0">Set Date Time</button> -->
                         </div>
                     </div>
                 </div>
